--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 * {
-  font-family: Roboto, "Helvetica Neue"
+  font-family: Roboto, "Helvetica Neue";
+}
+
+html, 
+body, 
+#root, 
+.app {
+  height: 100%;
 }
 
 #sidebar {
@@ -28,20 +35,26 @@
   margin-left: 0px;
 }
 
-#nav-list li:hover {
+.nav-icon {
+  cursor: pointer;
+  display: inline-block;
+  padding: 12px
+}
+
+.nav-icon:hover {
   background-color: #E8F5FE;
   color: #1DA1F2;
 }
 
 #tweet-button {
   background-color: #1DA1F2;
-  border-radius: 30px;
-  color: white;
+  border-radius: 9999px;
   display: inline-block;
-  font-size: 15px;
-  font-weight: 700;
-  padding: 10px 50px;
+  padding: none;
+  height: 46px;
+  width: 46px;
 }
+
 
 .tweet {
   border-right: 1px solid #ebeef0;
@@ -53,5 +66,6 @@
 .fh {
   height: 100%;
 }
+
 
 
