fixed sidebar/nav css

--- a/src/App.css
+++ b/src/App.css
@@ -11,35 +11,25 @@ body,
 
 #sidebar {
   border-right: 1px solid #ebeef0;
-}
-#nav {
-  /* height: 100vh; */
   display: inline-block;
-  font-weight: bold;
+  width: 70px;
   text-align: center;
 }
 
-/* ul */
-#nav-list {
-  list-style-type: none;
-  text-align: left;
-  padding-left: 0;
-}
-
-#nav-list li {
-  border-radius: 30px;
-  cursor: pointer;
+#nav {
   display: inline-block;
-  font-size: 20px;
-  padding: 10px 30px 10px 20px;
-  margin-left: 0px;
+  font-weight: bold;
 }
 
 .nav-icon {
+  border-radius: 9999px;
+  align-items: center;
   cursor: pointer;
   display: inline-block;
-  padding: 12px
+  margin-left: auto;
+  padding: 12px;
 }
+
 
 .nav-icon:hover {
   background-color: #E8F5FE;
@@ -60,11 +50,14 @@ body,
   border-right: 1px solid #ebeef0;
   border-top: 1px solid #ebeef0;
   border-bottom: 1px solid #ebeef0;
-  /* display: inline-block; */
 }
 
 .fh {
   height: 100%;
+}
+
+#main-content {
+  display: inline-block;
 }
 
 
