--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,17 @@
     width: calc(100% - 70px)
   }
 
+  .nav-icon {
+    padding: 12px
+  }
+
   #sidebar {
     width: 70px;
+  }
+
+  #tweet-button {
+    height: 46px;
+    width: 46px;
   }
 }
 @media screen and (min-width: 1275px) {
@@ -16,8 +25,17 @@
     width: calc(100% - 300px)
   }
 
+  .nav-icon {
+    padding: 12px 20px;
+  }
+
   #sidebar {
     width: 300px;
+  }
+
+  #tweet-button {
+    height: 46px;
+    width: 192px;
   }
 }
 
@@ -36,6 +54,10 @@ body,
   height: 100%;
 }
 
+#icon-container {
+  text-align: left;
+}
+
 #nav {
   display: inline-block;
   font-weight: bold;
@@ -52,12 +74,16 @@ body,
   cursor: pointer;
   display: inline-block;
   margin-left: auto;
-  padding: 12px;
 }
 
 .nav-icon:hover {
   background-color: #E8F5FE;
   color: #1DA1F2;
+}
+
+.nav-icon span {
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 #sidebar {
@@ -76,10 +102,8 @@ body,
 #tweet-button {
   background-color: #1DA1F2;
   border-radius: 9999px;
+  color: white;
   display: inline-block;
-  height: 46px;
-  padding: none;
-  width: 46px;
 }
 
 
